[gd_scene load_steps=25 format=2]

[ext_resource path="res://Catch/Assets/catch.png" type="Texture" id=1]
[ext_resource path="res://Catch/Scripts/CatchNormal.gd" type="Script" id=2]
[ext_resource path="res://Catch/Assets/Sounds/caught5.wav" type="AudioStream" id=3]
[ext_resource path="res://Player/Scripts/Multiple_Sound_Player.gd" type="Script" id=4]
[ext_resource path="res://Catch/Assets/Sounds/caught4.wav" type="AudioStream" id=5]
[ext_resource path="res://Catch/Assets/Sounds/caught3.wav" type="AudioStream" id=6]
[ext_resource path="res://Catch/Assets/Sounds/caught1.wav" type="AudioStream" id=7]
[ext_resource path="res://Catch/Assets/Sounds/caught6.wav" type="AudioStream" id=8]
[ext_resource path="res://Catch/Assets/Sounds/caught2.wav" type="AudioStream" id=9]
[ext_resource path="res://Catch/Assets/Sounds/dead3.wav" type="AudioStream" id=10]
[ext_resource path="res://Catch/Assets/Sounds/dead1.wav" type="AudioStream" id=11]
[ext_resource path="res://Catch/Assets/Sounds/dead2.wav" type="AudioStream" id=12]
[ext_resource path="res://Catch/Scripts/Movement.gd" type="Script" id=13]
[ext_resource path="res://Catch/Scripts/Sprites.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 shadow_color : hint_color;

void fragment() {
	COLOR = shadow_color;
	COLOR.a = textureLod(TEXTURE, UV , 0.0).a;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/shadow_color = Color( 0.14902, 0.0509804, 0.203922, 1 )

[sub_resource type="CircleShape2D" id=9]
radius = 50.0

[sub_resource type="CircleShape2D" id=10]
radius = 7.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2, 2 )

[sub_resource type="Animation" id=4]
resource_name = "Caught"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/CatchSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -6, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/ShadowSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/CatchSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.341176 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/ShadowSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.00465136, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.341176 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Dead"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/CatchSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 0.4 ), Vector2( 0.3, 1.6 ), Vector2( 0.7, 0.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/CatchSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.815686, 0.215686, 0.568627, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/CatchSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/CatchSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/ShadowSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/CatchSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/ShadowSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Spawn"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/CatchSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6, -7 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/ShadowSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 0.7, 0.7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/CatchSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.341176 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/ShadowSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.341176 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CatchNormal" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprites" type="Node2D" parent="."]
script = ExtResource( 14 )
offset_rotation = 45.0

[node name="ShadowSprite" type="Sprite" parent="Sprites"]
material = SubResource( 3 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CatchSprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 1 )

[node name="Movement" type="Node2D" parent="."]
script = ExtResource( 13 )
velocity = 20.0

[node name="ScanPatches" type="Area2D" parent="Movement"]
collision_layer = 0
collision_mask = 256
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Movement/ScanPatches"]
shape = SubResource( 9 )

[node name="ScanOtherSheep" type="Area2D" parent="Movement"]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Movement/ScanOtherSheep"]
shape = SubResource( 10 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
anims/Caught = SubResource( 4 )
anims/Dead = SubResource( 7 )
anims/RESET = SubResource( 5 )
anims/Spawn = SubResource( 8 )

[node name="SoundTimer" type="Timer" parent="."]
one_shot = true

[node name="CaughtSound" type="AudioStreamPlayer2D" parent="."]
bus = "SoundEffects"
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}
available_sounds = [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 8 ) ]

[node name="DeadSound" type="AudioStreamPlayer2D" parent="."]
bus = "SoundEffects"
script = ExtResource( 4 )
available_sounds = [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ) ]

[connection signal="area_entered" from="Movement/ScanPatches" to="Movement" method="_on_ScanPatches_area_entered"]
[connection signal="area_exited" from="Movement/ScanPatches" to="Movement" method="_on_ScanPatches_area_exited"]
[connection signal="body_entered" from="Movement/ScanOtherSheep" to="Movement" method="_on_ScanOtherSheep_body_entered"]
[connection signal="body_exited" from="Movement/ScanOtherSheep" to="Movement" method="_on_ScanOtherSheep_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="SoundTimer" to="." method="_on_SoundTimer_timeout"]
[connection signal="finished" from="CaughtSound" to="." method="_on_CaughtSound_finished"]
[connection signal="finished" from="DeadSound" to="." method="_on_DeadSound_finished"]
